[package]
name = "pidash"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
colored = "3.0.0"
rusqlite = "0.35.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
chrono = "0.4.40"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
axum-client-ip = "1.1.3"
http = "1.3.1"
tower = "0.5.2"
tokio-rustls = "0.26.2"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
hyper = { version = "1.6.0", features = ["server", "http1"]}
axum-server = "0.7.2"
